Update csv var names

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -21,55 +21,33 @@
 # -------------------------
 
 error.invalid.type=\
-  invalid type expected ''{0}'' but found ''{1}''
+  invalid expected type ''{0}''
 
-error.csv.root.missing=\
-  csv root element is missing
+error.union.types.not.allowed.as.expected.type=\
+  union types are not allowed in the expected type, found ''{0}''
 
-error.invalid.rest.type=\
-  invalid rest type ''{0}''
+error.invalid.array.member.in.expected.type=\
+  invalid type ''{0}'' in the expected array type
 
-error.array.size.mismatch=\
-  array size is not compatible with the expected size
+error.cannot.found.field.in.csv=\
+  no matching header value is found for the required field ''{0}''
 
-error.required.field.not.present=\
-  required field ''{0}'' not present in CSV
+error.csv.value.cannot.cast.into.expected.type=\
+  value ''{0}'' cannot be cast into ''{1}''
 
-error.required.attribute.not.present=\
-  required attribute ''{0}'' not present in CSV
+error.invalid.expected.type=\
+  expected a array type, found ''{0}'' 
 
-error.duplicate.field=\
-  duplicate field ''{0}''
+error.invalid.token.while.reading.the.csv.data=\
+  error while reading the csv data ''{0}''
 
-error.found.array.for.non.array.type=\
-  expected ''{0}'' value for the field ''{1}'' found ''array'' value
+error.invalid.csv.data.format=\
+  invalid csv data format
 
-error.expected.anydata.or.json=\
-  incompatible type expected anydata or json
+error.invalid.expected.array.size=\
+  invalid array size for expected array type, cannot be greater than ''{0}''
 
-error.namespace.mismatch=\
-  namespace mismatched for the type: ''{0}''
+error.invalid.expected.tuple.size=\
+  invalid array size for expected tuple type, cannot be greater than ''{0}''
 
-error.type.name.mismatch.with.csv.element=\
-  record type name ''{0}'' mismatch with given CSV name ''{1}''
 
-error.cannot.read.stream=\
-  cannot read the stream, interrupted error
-
-error.cannot.convert.to.expected.type=\
-  ''{0}'' value ''{1}'' cannot be converted to ''{2}''
-
-error.unsupported.type=\
-  unsupported input type
-
-error.stream.broken=\
-  error occurred while reading the stream: ''{0}''
-
-error.csv.parse.error=\
-  failed to parse csv: ''{0}''
-
-error.incompatible.error=\
-  incompatible type ''{0}'',''{1}''
-
-error.invalid.type.for.field.error=\
-  invalid type for field ''{0}''
