Update error diagnostic codes

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -39,7 +39,7 @@ error.invalid.expected.type=\
   expected a array type, found ''{0}'' 
 
 error.invalid.token.while.reading.the.csv.data=\
-  error while reading the csv data ''{0}''
+  error while reading the csv data ''{0}'' in line: ''{1}'', column: ''{2}''
 
 error.invalid.csv.data.format=\
   invalid csv data format
