Refactor the code with user configurations

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -50,4 +50,5 @@ error.invalid.expected.array.size=\
 error.invalid.expected.tuple.size=\
   invalid array size for expected tuple type, cannot be greater than ''{0}''
 
-
+error.invalid.skip.column.query=\
+  invalid query found for skip column field, ''{0}''
