Add usere configs and basic tests

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -52,3 +52,6 @@ error.invalid.expected.tuple.size=\
 
 error.invalid.skip.column.query=\
   invalid query found for skip column field, ''{0}''
+
+error.invalid.type.for.field=\
+  no mapping type found for value ''{0}'' in key ''{1}''
