--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -55,3 +55,13 @@ error.invalid.skip.column.query=\
 
 error.invalid.type.for.field=\
   no mapping type found for value ''{0}'' in key ''{1}''
+
+error.invalid.type.for.array=\
+  value ''{0}'' in index ''{1}'' is not compatible with array type ''{2}''
+
+error.expected.type.can.only.contains.basic.types=\
+  expected type cannot contains types other than basic types, ''{0}'' not allowed
+
+error.invalid.conversion.for.array.to.map=\
+  value ''{0}'' cannot be cast into ''{1}'', because fields in ''{1}'' or the provided \
+  expected headers are not matching with the ''{0}''
