Add tests for arrays & maps for fromStringWithType

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -21,7 +21,7 @@
 # -------------------------
 
 error.invalid.type=\
-  invalid expected type ''{0}''
+  invalid expected type ''{0}'', expected a subtype of (map<anydata>|anydata)[]
 
 error.union.types.not.allowed.as.expected.type=\
   union types are not allowed in the expected type, found ''{0}''
