--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -65,3 +65,6 @@ error.expected.type.can.only.contains.basic.types=\
 error.invalid.conversion.for.array.to.map=\
   value ''{0}'' cannot be cast into ''{1}'', because fields in ''{1}'' or the provided \
   expected headers are not matching with the ''{0}''
+
+error.invalid.configurations=\
+  invalid configurations: ''{0}''
