Add test files for basic functionality

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -68,3 +68,10 @@ error.invalid.conversion.for.array.to.map=\
 
 error.invalid.configurations=\
   invalid configurations: ''{0}''
+
+error.invalid.format.for.skiplines=\
+  "Invalid format for the skipLines field. Expected format: 'start-end'"
+error.invalid.range.for.skiplines=\
+  Invalid range for the skipLines field. Start value must be less than or equal to end value."
+error.invalid.value.for.skiplines=\
+  "Invalid input for the skipLines field. Both start and end values must be integers."
