Add tests for customheaders

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -70,8 +70,19 @@ error.invalid.configurations=\
   invalid configurations: ''{0}''
 
 error.invalid.format.for.skiplines=\
-  "Invalid format for the skipLines field. Expected format: 'start-end'"
+  Invalid format for the skipLines field. Expected format: 'start-end'
+
 error.invalid.range.for.skiplines=\
-  Invalid range for the skipLines field. Start value must be less than or equal to end value."
+  Invalid range for the skipLines field. Start value must be less than or equal to end value.
+
 error.invalid.value.for.skiplines=\
-  "Invalid input for the skipLines field. Both start and end values must be integers."
+  Invalid input for the skipLines field. Both start and end values must be integers.
+
+error.invalid.custom.header=\
+  Invalid header value: ''{0}''
+
+error.invalid.custom.header.length=\
+  Invalid length for the custom headers
+
+error.invalid.header.names.length=\
+  Invalid length for the header names
