Add basic text enclosure property

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -86,3 +86,6 @@ error.invalid.custom.header.length=\
 
 error.invalid.header.names.length=\
   Invalid length for the header names
+
+error.header.cannot.be.empty=\
+  The provided header row is empty
