Add tests for nil config and data projection

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -89,3 +89,6 @@ error.invalid.header.names.length=\
 
 error.header.cannot.be.empty=\
   The provided header row is empty
+
+error.no.field.for.header=\
+  No mapping field in the expected type for header ''{0}''
