Add tests for name annotation

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -92,3 +92,6 @@ error.header.cannot.be.empty=\
 
 error.no.field.for.header=\
   No mapping field in the expected type for header ''{0}''
+
+error.duplicate.field=\
+  Duplicate field found in record fields: ''{0}''
