Add constraint validations

--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -17,3 +17,9 @@ groupId = "io.ballerina.stdlib"
 artifactId = "data.csv-native"
 version = "0.1.0"
 path = "../native/build/libs/data.csv-native-0.1.0-SNAPSHOT.jar"
+
+[[platform.java17.dependency]]
+groupId = "io.ballerina.stdlib"
+artifactId = "constraint-native"
+version = "1.5.0"
+path = "./lib/constraint-native-1.5.0.jar"
