Add tests for internal union types

--- a/native/src/main/resources/error.properties
+++ b/native/src/main/resources/error.properties
@@ -95,3 +95,6 @@ error.no.field.for.header=\
 
 error.duplicate.field=\
   Duplicate field found in record fields: ''{0}''
+
+error.cannot.convert.into.exptype=\
+  The source value cannot convert in to the ''{0}''
