--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,26 @@
  * under the License.
  */
 
+pluginManagement {
+    plugins {
+        id "com.github.spotbugs" version "${spotbugsVersion}"
+        id "com.github.johnrengelman.shadow" version "${shadowJarPluginVersion}"
+        id "de.undercouch.download" version "${downloadPluginVersion}"
+        id "net.researchgate.release" version "${releasePluginVersion}"
+        id "io.ballerina.plugin" version "${ballerinaGradlePluginVersion}"
+    }
+    repositories {
+        gradlePluginPortal()
+        maven {
+            url = 'https://maven.pkg.github.com/ballerina-platform/*'
+            credentials {
+                username System.getenv("packageUser")
+                password System.getenv("packagePAT")
+            }
+        }
+    }
+}
+
 plugins {
     id "com.gradle.enterprise" version "3.2"
 }
@@ -24,14 +44,14 @@ rootProject.name = 'data.csv'
 include(':checkstyle')
 include(':data.csv-native')
 include(':data.csv-ballerina')
-//include(':data.csv-compiler-plugin')
-//include(':data.csv-compiler-plugin-tests')
+include(':data.csv-compiler-plugin')
+include(':data.csv-compiler-plugin-tests')
 
 project(':checkstyle').projectDir = file("build-config${File.separator}checkstyle")
 project(':data.csv-native').projectDir = file('native')
 project(':data.csv-ballerina').projectDir = file('ballerina')
-//project(':data.csv-compiler-plugin').projectDir = file('compiler-plugin')
-//project(':data.csv-compiler-plugin-tests').projectDir = file('compiler-plugin-test')
+project(':data.csv-compiler-plugin').projectDir = file('compiler-plugin')
+project(':data.csv-compiler-plugin-tests').projectDir = file('compiler-plugin-test')
 
 gradleEnterprise {
     buildScan {
