Added api doc comments

--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -82,8 +82,6 @@ task updateTomlFiles {
         def stdlibDependentConstraintVersion = stripBallerinaExtensionVersion("${stdlibDependentConstraintNativeVersion}")
         def newConfig = ballerinaTomlFilePlaceHolder.text.replace("@project.version@", project.version)
         newConfig = newConfig.replace("@toml.version@", tomlVersion)
-        newConfig = newConfig.replace("@stdlib.constraintnative.version@", stdlibDependentConstraintNativeVersion)
-        newConfig = newConfig.replace("@constraint.version@", stdlibDependentConstraintVersion)
         ballerinaTomlFile.text = newConfig
 
         def newCompilerPluginToml = compilerPluginTomlFilePlaceHolder.text.replace("@project.version@", project.version)
@@ -141,3 +139,6 @@ build.dependsOn deleteDependencyTomlFiles
 test.dependsOn ":${packageName}-native:build"
 test.dependsOn ":${packageName}-native:build"
 test.dependsOn ":${packageName}-compiler-plugin:build"
+
+publish.dependsOn build
+publishToMavenLocal.dependsOn build
