--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -137,10 +137,14 @@ build.dependsOn ":${packageName}-native:build"
 build.dependsOn deleteDependencyTomlFiles
 build.dependsOn ":${packageName}-compiler-plugin:build"
 build.dependsOn deleteDependencyTomlFiles
+build.finalizedBy ":${packageName}-ballerina-tests:build"
+
+//build.finalizedBy ":${packageName}-ballerina-tests:ballerinaTest"
 
 test.dependsOn ":${packageName}-native:build"
 test.dependsOn ":${packageName}-native:build"
 test.dependsOn ":${packageName}-compiler-plugin:build"
+test.finalizedBy ":${packageName}-ballerina-tests:build"
 
 publish.dependsOn build
 publishToMavenLocal.dependsOn build
