--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ org.gradle.caching=true
 group=io.ballerina.stdlib
 version=0.1.0-SNAPSHOT
 ballerinaLangVersion=2201.9.0
+ballerinaTomlParserVersion=1.2.2
 
 checkstyleToolVersion=10.12.0
 puppycrawlCheckstyleVersion=10.12.0
