--- a/ballerina-tests/build.gradle
+++ b/ballerina-tests/build.gradle
@@ -32,8 +32,8 @@ def testCommonTomlFilePlaceHolder = new File("${project.rootDir}/build-config/re
 def ballerinaDist = "${project.rootDir}/target/ballerina-runtime"
 def distributionBinPath =  "${ballerinaDist}/bin"
 def testCoverageParam = "--code-coverage --coverage-format=xml --includes=io.ballerina.stdlib.data.*:ballerina.*"
-def testPackages = ["user-config-tests", "type-compatible-tests", "unicode-tests", "constraint-validation-tests", "parse-list-types-tests", "parse-record-types-tests",
-                    "parse-string-array-types-tests", "parse-string-record-types-tests", "union-type-tests"]
+def testPackages = ["parse-string-array-types-tests", "user-config-tests", "type-compatible-tests", "unicode-tests", "constraint-validation-tests", 
+                    "parse-list-types-tests", "parse-record-types-tests", "parse-string-record-types-tests", "union-type-tests"]
 def testCommonPackage = "csv-commons"
 
 def stripBallerinaExtensionVersion(String extVersion) {
