--- a/ballerina-tests/build.gradle
+++ b/ballerina-tests/build.gradle
@@ -32,7 +32,7 @@ def testCommonTomlFilePlaceHolder = new File("${project.rootDir}/build-config/re
 def ballerinaDist = "${project.rootDir}/target/ballerina-runtime"
 def distributionBinPath =  "${ballerinaDist}/bin"
 def testCoverageParam = "--code-coverage --coverage-format=xml --includes=io.ballerina.stdlib.data.*:ballerina.*"
-def testPackages = ["parse-string-array-types-tests", "user-config-tests", "type-compatible-tests", "unicode-tests", "constraint-validation-tests", 
+def testPackages = ["user-config-tests", "parse-string-array-types-tests", "type-compatible-tests", "unicode-tests", "constraint-validation-tests",
                     "parse-list-types-tests", "parse-record-types-tests", "parse-string-record-types-tests", "union-type-tests"]
 def testCommonPackage = "csv-commons"
 
