--- a/ballerina/CompilerPlugin.toml
+++ b/ballerina/CompilerPlugin.toml
@@ -1,6 +1,6 @@
 [plugin]
 id = "constraint-compiler-plugin"
-class = "io.ballerina.stdlib.data.csvdata.compiler.CsvDataCompilerPlugin"
+class = "compiler.io.ballerina.lib.data.csvdata.CsvDataCompilerPlugin"
 
 [[dependency]]
 path = "../compiler-plugin/build/libs/data.csv-compiler-plugin-0.1.0-SNAPSHOT.jar"
