--- a/ballerina-tests/build.gradle
+++ b/ballerina-tests/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+ * Copyright (c) 2024, WSO2 LLC. (https://www.wso2.com).
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,8 +17,6 @@
 plugins {
     id 'jacoco'
 }
-
-//apply plugin: 'java'
 
 import org.apache.tools.ant.taskdefs.condition.Os
 
