--- a/build-config/resources/CompilerPlugin.toml
+++ b/build-config/resources/CompilerPlugin.toml
@@ -1,6 +1,6 @@
 [plugin]
 id = "constraint-compiler-plugin"
-class = "io.ballerina.stdlib.data.csvdata.compiler.CsvDataCompilerPlugin"
+class = "io.ballerina.lib.data.csvdata.compiler.CsvDataCompilerPlugin"
 
 [[dependency]]
 path = "../compiler-plugin/build/libs/data.csv-compiler-plugin-@project.version@.jar"
