[Automated] Update the native jar versions

--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -13,7 +13,7 @@ export = ["data.csv"]
 graalvmCompatible = true
 
 [[platform.java17.dependency]]
-groupId = "io.ballerina.stdlib"
+groupId = "io.ballerina.lib"
 artifactId = "data.csv-native"
 version = "0.1.0"
 path = "../native/build/libs/data.csv-native-0.1.0-SNAPSHOT.jar"
