--- a/build-config/resources/Ballerina.toml
+++ b/build-config/resources/Ballerina.toml
@@ -13,7 +13,7 @@ export = ["data.csv"]
 graalvmCompatible = true
 
 [[platform.java17.dependency]]
-groupId = "io.ballerina.stdlib"
+groupId = "io.ballerina.lib"
 artifactId = "data.csv-native"
 version = "@toml.version@"
 path = "../native/build/libs/data.csv-native-@project.version@.jar"
