--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.caching=true
-group=io.ballerina.stdlib
+group=io.ballerina.lib
 version=0.1.0-SNAPSHOT
 ballerinaLangVersion=2201.9.0
 ballerinaTomlParserVersion=1.2.2
