--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -60,7 +60,7 @@ def stripBallerinaExtensionVersion(String extVersion) {
 apply plugin: 'io.ballerina.plugin'
 
 ballerina {
-    testCoverageParam = "--code-coverage --coverage-format=xml --includes=io.ballerina.lib.data.*:ballerina.*"
+    testCoverageParam = "--code-coverage --coverage-format=xml --includes=io.ballerina.lib.data.csvdata.*:ballerina.*"
     packageOrganization = packageOrg
     module = packageName
     langVersion = ballerinaLangVersion
