Update graalvm properties

--- a/build-config/resources/BallerinaTest.toml
+++ b/build-config/resources/BallerinaTest.toml
@@ -13,4 +13,4 @@ version = "@toml.version@"
 graalvmCompatible = true
 
 [build-options]
-graalvmBuildOptions = "-H:IncludeLocales=en_US,fr_FR"
+graalvmBuildOptions = "-H:+IncludeAllLocales"
