--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 *.zip
 *.tar.gz
 *.rar
+*.deb
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.csv
 hs_err_pid*
