--- a/ballerina-tests/build.gradle
+++ b/ballerina-tests/build.gradle
@@ -20,7 +20,7 @@ plugins {
 
 import org.apache.tools.ant.taskdefs.condition.Os
 
-description = 'Ballerina - HTTP/WS Ballerina Tests'
+description = 'Ballerina - CSV data module Ballerina Tests'
 
 def packageName = "data.csv"
 def packageOrg = "ballerina"
@@ -29,7 +29,7 @@ def ballerinaTomlFilePlaceHolder = new File("${project.rootDir}/build-config/res
 def testCommonTomlFilePlaceHolder = new File("${project.rootDir}/build-config/resources/CsvTestCommon.toml")
 def ballerinaDist = "${project.rootDir}/target/ballerina-runtime"
 def distributionBinPath =  "${ballerinaDist}/bin"
-def testCoverageParam = "--code-coverage --coverage-format=xml --includes=io.ballerina.lib.data.*:ballerina.*"
+def testCoverageParam = "--code-coverage --coverage-format=xml --includes=io.ballerina.lib.data.csvdata.*:ballerina.*"
 def testPackages = ["user-config-tests", "type-compatible-tests", "parse-string-array-types-tests", "unicode-tests", "constraint-validation-tests",
                     "parse-list-types-tests", "parse-record-types-tests", "parse-string-record-types-tests", "union-type-tests"]
 def testCommonPackage = "csv-commons"
