Add codecov configurations for codecov yaml

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,10 @@
+fixes:
+  - "ballerina/data.csv/**/::../ballerina/"
+
+ignore:
+  - "ballerina-tests"
+  - "test-utils"
+
 coverage:
   precision: 2
   round: down
