--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.lib
 version=0.1.0-SNAPSHOT
-ballerinaLangVersion=2201.9.0
+ballerinaLangVersion=2201.10.0-20240801-104200-87df251c
 ballerinaTomlParserVersion=1.2.2
 
 checkstyleToolVersion=10.12.0
