--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -12,5 +12,5 @@ jobs:
     uses: ballerina-platform/ballerina-library/.github/workflows/release-package-template.yml@main
     secrets: inherit
     with:
-      package-name: data.jsondata
+      package-name: data.csv
       package-org: ballerina
