publish native package for the maven central

--- a/native/build.gradle
+++ b/native/build.gradle
@@ -68,6 +68,28 @@ spotbugsTest {
     enabled = false
 }
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId project.group
+            artifactId "data.csv-native"
+            version = project.version
+            artifact jar
+        }
+    }
+
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/ballerina-platform/module-ballerina-data.csv")
+            credentials {
+                username = System.getenv("publishUser")
+                password = System.getenv("publishPAT")
+            }
+        }
+    }
+}
+
 compileJava {
     doFirst {
         options.compilerArgs = [
