--- a/native/src/main/resources/csv_error.properties
+++ b/native/src/main/resources/csv_error.properties
@@ -100,4 +100,4 @@ error.cannot.convert.into.exptype=\
   The source value cannot convert in to the ''{0}''
 
 error.no.custom.header.provided=\
-  Custom header should be provided
+  Custom headers should be provided
