--- a/ballerina-tests/union-type-tests/Ballerina.toml
+++ b/ballerina-tests/union-type-tests/Ballerina.toml
@@ -13,4 +13,4 @@ version = "0.1.0"
 graalvmCompatible = true
 
 [build-options]
-graalvmBuildOptions = "-H:IncludeLocales=en_US,fr_FR"
+graalvmBuildOptions = "-H:+IncludeAllLocales"
