Update the record and array basic operations with new design

--- a/native/src/main/resources/csv_error.properties
+++ b/native/src/main/resources/csv_error.properties
@@ -79,7 +79,7 @@ error.invalid.value.for.skiplines=\
   Invalid input for the skipLines field. Both start and end values must be integers.
 
 error.inconsistent.header=\
-  Header ''{0}'' cannot be find in previous data rows
+  Header ''{0}'' cannot be find in data rows
 
 error.invalid.custom.header.length=\
   Invalid length for the headers
