Add list related header param changes for transform api

--- a/native/src/main/resources/csv_error.properties
+++ b/native/src/main/resources/csv_error.properties
@@ -101,3 +101,6 @@ error.cannot.convert.into.exptype=\
 
 error.no.custom.header.provided=\
   Custom headers should be provided
+
+error.headers.with.varying.length.not.supported=\
+  CSV data rows with varying headers are not yet supported
