Allow empty strings to represent nil values using configs

--- a/native/src/main/resources/csv_error.properties
+++ b/native/src/main/resources/csv_error.properties
@@ -104,3 +104,9 @@ error.no.custom.header.provided=\
 
 error.headers.with.varying.length.not.supported=\
   CSV data rows with varying headers are not yet supported
+
+error.header.value.cannot.be.empty=\
+  Header cannot be empty
+
+error.duplicate.header=\
+  Duplicate header found: ''{0}''
