Update the order of union types

--- a/native/src/main/resources/csv_error.properties
+++ b/native/src/main/resources/csv_error.properties
@@ -110,3 +110,6 @@ error.header.value.cannot.be.empty=\
 
 error.duplicate.header=\
   Duplicate header found: ''{0}''
+
+error.invalid.union.conversion=\
+  The CSV cannot be converted into any of the uniform union types in ''{0}''
