Add tests for slice operations

--- a/native/src/main/resources/csv_error.properties
+++ b/native/src/main/resources/csv_error.properties
@@ -82,7 +82,7 @@ error.inconsistent.header=\
   Header ''{0}'' cannot be find in data rows
 
 error.invalid.custom.header.length=\
-  Invalid length for the headers
+  Invalid number of headers
 
 error.invalid.header.names.length=\
   Invalid number of headers
