[Automated] Update the native jar versions

--- a/ballerina/CompilerPlugin.toml
+++ b/ballerina/CompilerPlugin.toml
@@ -1,5 +1,5 @@
 [plugin]
-id = "constraint-compiler-plugin"
+id = "data.csv-compiler-plugin"
 class = "io.ballerina.lib.data.csvdata.compiler.CsvDataCompilerPlugin"
 
 [[dependency]]
