--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -132,16 +132,14 @@ task deleteDependencyTomlFiles {
 updateTomlFiles.dependsOn copyStdlibs
 
 build.dependsOn "generatePomFileForMavenPublication"
+build.dependsOn deleteDependencyTomlFiles
 build.dependsOn ":${packageName}-native:build"
-build.dependsOn deleteDependencyTomlFiles
 build.dependsOn ":${packageName}-compiler-plugin:build"
-build.dependsOn deleteDependencyTomlFiles
-build.finalizedBy ":${packageName}-ballerina-tests:build"
 
-test.dependsOn ":${packageName}-native:build"
+test.dependsOn "generatePomFileForMavenPublication"
+test.dependsOn deleteDependencyTomlFiles
 test.dependsOn ":${packageName}-native:build"
 test.dependsOn ":${packageName}-compiler-plugin:build"
-test.finalizedBy ":${packageName}-ballerina-tests:build"
 
 publish.dependsOn build
 publishToMavenLocal.dependsOn build
