Refactor APIs and API docs

--- a/native/src/main/resources/csv_error.properties
+++ b/native/src/main/resources/csv_error.properties
@@ -70,46 +70,43 @@ error.invalid.configurations=\
   invalid configurations: ''{0}''
 
 error.invalid.format.for.skiplines=\
-  Invalid format for the skipLines field. Expected format: 'start-end'
+  invalid format for the skipLines field. Expected format: 'start-end'
 
 error.invalid.range.for.skiplines=\
-  Invalid range for the skipLines field. Start value must be less than or equal to end value.
+  invalid range for the skipLines field. Start value must be less than or equal to end value.
 
 error.invalid.value.for.skiplines=\
-  Invalid input for the skipLines field. Both start and end values must be integers.
+  invalid input for the skipLines field. Both start and end values must be integers.
 
 error.inconsistent.header=\
-  Header ''{0}'' cannot be find in data rows
+  header ''{0}'' cannot be found in data rows
 
 error.invalid.custom.header.length=\
-  Invalid number of headers
+  invalid number of headers
 
 error.invalid.header.names.length=\
-  Invalid number of headers
+  invalid number of headers
 
 error.header.cannot.be.empty=\
-  The provided header row is empty
+  provided header row is empty
 
 error.no.field.for.header=\
-  No mapping field in the expected type for header ''{0}''
+  no mapping field in the expected type for header ''{0}''
 
 error.duplicate.field=\
-  Duplicate field found in record fields: ''{0}''
+  duplicate field found in record fields: ''{0}''
 
 error.cannot.convert.into.exptype=\
-  The source value cannot convert in to the ''{0}''
+  source value cannot converted in to the ''{0}''
 
 error.no.custom.header.provided=\
-  Custom headers should be provided
+  custom headers should be provided
 
 error.headers.with.varying.length.not.supported=\
   CSV data rows with varying headers are not yet supported
 
 error.header.value.cannot.be.empty=\
-  Header cannot be empty
+  header cannot be empty
 
 error.duplicate.header=\
-  Duplicate header found: ''{0}''
-
-error.invalid.union.conversion=\
-  The CSV cannot be converted into any of the uniform union types in ''{0}''
+  duplicate header found: ''{0}''
