--- a/ballerina-tests/csv-commons/Dependencies.toml
+++ b/ballerina-tests/csv-commons/Dependencies.toml
@@ -5,12 +5,12 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.10.0"
+distribution-version = "2201.11.0-20241117-133400-a3054b77"
 
 [[package]]
 org = "ballerina"
 name = "csv_commons"
-version = "0.1.0"
+version = "0.1.1"
 modules = [
 	{org = "ballerina", packageName = "csv_commons", moduleName = "csv_commons"}
 ]
