--- a/ballerina-tests/type-compatible-tests/Dependencies.toml
+++ b/ballerina-tests/type-compatible-tests/Dependencies.toml
@@ -5,12 +5,12 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.10.0"
+distribution-version = "2201.11.0-20241117-133400-a3054b77"
 
 [[package]]
 org = "ballerina"
 name = "csv_commons"
-version = "0.1.0"
+version = "0.1.1"
 scope = "testOnly"
 modules = [
 	{org = "ballerina", packageName = "csv_commons", moduleName = "csv_commons"}
@@ -19,7 +19,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "data.csv"
-version = "0.1.0"
+version = "0.1.1"
 scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
@@ -31,7 +31,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "io"
-version = "1.6.1"
+version = "1.6.2"
 scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
@@ -108,7 +108,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "type_compatible_tests"
-version = "0.1.0"
+version = "0.1.1"
 dependencies = [
 	{org = "ballerina", name = "csv_commons"},
 	{org = "ballerina", name = "data.csv"},
