--- a/ballerina-tests/unicode-tests/Dependencies.toml
+++ b/ballerina-tests/unicode-tests/Dependencies.toml
@@ -5,12 +5,12 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.10.0"
+distribution-version = "2201.11.0-20241117-133400-a3054b77"
 
 [[package]]
 org = "ballerina"
 name = "data.csv"
-version = "0.1.0"
+version = "0.1.1"
 scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
@@ -77,7 +77,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "unicode_tests"
-version = "0.1.0"
+version = "0.1.1"
 dependencies = [
 	{org = "ballerina", name = "data.csv"},
 	{org = "ballerina", name = "test"}
