--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,26 +1,26 @@
 [package]
 org = "ballerina"
 name = "data.csv"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Ballerina"]
 keywords = ["csv"]
 repository = "https://github.com/ballerina-platform/module-ballerina-data.csv"
 license = ["Apache-2.0"]
-distribution = "2201.9.0"
+distribution = "2201.11.0-20241117-133400-a3054b77"
 export = ["data.csv"]
 readme = "Package.md"
 
-[platform.java17]
+[platform.java21]
 graalvmCompatible = true
 
-[[platform.java17.dependency]]
+[[platform.java21.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "data.csv-native"
-version = "0.1.0"
-path = "../native/build/libs/data.csv-native-0.1.0.jar"
+version = "0.1.1"
+path = "../native/build/libs/data.csv-native-0.1.1-SNAPSHOT.jar"
 
-[[platform.java17.dependency]]
+[[platform.java21.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "constraint-native"
-version = "1.5.0"
-path = "./lib/constraint-native-1.5.0.jar"
+version = "1.6.0"
+path = "./lib/constraint-native-1.6.0-20241113-090900-d276ad5.jar"
