--- a/ballerina/CompilerPlugin.toml
+++ b/ballerina/CompilerPlugin.toml
@@ -3,4 +3,4 @@ id = "data.csv-compiler-plugin"
 class = "io.ballerina.lib.data.csvdata.compiler.CsvDataCompilerPlugin"
 
 [[dependency]]
-path = "../compiler-plugin/build/libs/data.csv-compiler-plugin-0.1.0.jar"
+path = "../compiler-plugin/build/libs/data.csv-compiler-plugin-0.1.1-SNAPSHOT.jar"
