--- a/build-config/resources/Ballerina.toml
+++ b/build-config/resources/Ballerina.toml
@@ -6,20 +6,20 @@ authors = ["Ballerina"]
 keywords = ["csv"]
 repository = "https://github.com/ballerina-platform/module-ballerina-data.csv"
 license = ["Apache-2.0"]
-distribution = "2201.9.0"
+distribution = "2201.11.0-20241117-133400-a3054b77"
 export = ["data.csv"]
 readme = "Package.md"
 
-[platform.java17]
+[platform.java21]
 graalvmCompatible = true
 
-[[platform.java17.dependency]]
+[[platform.java21.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "data.csv-native"
 version = "@toml.version@"
 path = "../native/build/libs/data.csv-native-@project.version@.jar"
 
-[[platform.java17.dependency]]
+[[platform.java21.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "constraint-native"
 version = "@constraint.version@"
