--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.caching=true
 group=io.ballerina.lib
 version=0.1.1-SNAPSHOT
-ballerinaLangVersion=2201.10.0
+ballerinaLangVersion=2201.11.0-20241117-133400-a3054b77
 ballerinaTomlParserVersion=1.2.2
 
 checkstyleToolVersion=10.12.0
 puppycrawlCheckstyleVersion=10.12.0
 testngVersion=7.6.1
 slf4jVersion=2.0.7
-spotbugsVersion=5.0.14
+spotbugsVersion=6.0.18
 shadowJarPluginVersion=8.1.1
 downloadPluginVersion=4.0.4
 releasePluginVersion=2.8.0
@@ -17,8 +17,8 @@ javaJsonPathVersion=2.9.0
 javaJsonSmartVersion=2.4.11
 javaAccessorsSmartVersion=2.4.7
 
-stdlibFileVersion=1.9.0
-stdlibIoVersion=1.6.0
-stdlibOsVersion=1.8.0
-stdlibTimeVersion=2.4.0
-stdlibConstraintVersion=1.5.0
+stdlibFileVersion=1.10.1-20241113-151700-e1a2e38
+stdlibIoVersion=1.6.2-20241112-233100-995cf5f
+stdlibOsVersion=1.8.1-20241113-122000-cca973b
+stdlibTimeVersion=2.6.0-20241113-073800-201b904
+stdlibConstraintVersion=1.6.0-20241113-090900-d276ad5
