--- a/native/build.gradle
+++ b/native/build.gradle
@@ -50,9 +50,12 @@ tasks.withType(Checkstyle) {
 }
 
 spotbugsMain {
+    def classLoader = plugins["com.github.spotbugs"].class.classLoader
+    def SpotBugsConfidence = classLoader.findLoadedClass("com.github.spotbugs.snom.Confidence")
+    def SpotBugsEffort = classLoader.findLoadedClass("com.github.spotbugs.snom.Effort")
+    effort = SpotBugsEffort.MAX
+    reportLevel = SpotBugsConfidence.LOW
     enabled=false
-    effort "max"
-    reportLevel "low"
     reportsDir = file("$project.buildDir/reports/spotbugs")
     reports {
         html.enabled true
