--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,12 +1,12 @@
 [package]
 org = "ballerina"
 name = "data.csv"
-version = "0.1.1"
+version = "0.4.0"
 authors = ["Ballerina"]
 keywords = ["csv"]
 repository = "https://github.com/ballerina-platform/module-ballerina-data.csv"
 license = ["Apache-2.0"]
-distribution = "2201.11.0-20241117-133400-a3054b77"
+distribution = "2201.11.0"
 export = ["data.csv"]
 readme = "Package.md"
 
@@ -16,11 +16,11 @@ graalvmCompatible = true
 [[platform.java21.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "data.csv-native"
-version = "0.1.1"
-path = "../native/build/libs/data.csv-native-0.1.1-SNAPSHOT.jar"
+version = "0.4.0"
+path = "../native/build/libs/data.csv-native-0.4.0-SNAPSHOT.jar"
 
 [[platform.java21.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "constraint-native"
 version = "1.6.0"
-path = "./lib/constraint-native-1.6.0-20241113-090900-d276ad5.jar"
+path = "./lib/constraint-native-1.6.0-20241122-133100-98689e2.jar"
