--- a/build-config/resources/Ballerina.toml
+++ b/build-config/resources/Ballerina.toml
@@ -6,7 +6,7 @@ authors = ["Ballerina"]
 keywords = ["csv"]
 repository = "https://github.com/ballerina-platform/module-ballerina-data.csv"
 license = ["Apache-2.0"]
-distribution = "2201.11.0"
+distribution = "2201.12.0-20250226-081700-17d84e0f"
 export = ["data.csv"]
 readme = "Package.md"
 
