--- a/ballerina-tests/parse-record-types-tests/Dependencies.toml
+++ b/ballerina-tests/parse-record-types-tests/Dependencies.toml
@@ -5,12 +5,12 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.11.0"
+distribution-version = "2201.12.0-20250228-115200-f38db343"
 
 [[package]]
 org = "ballerina"
 name = "csv_commons"
-version = "0.7.0"
+version = "0.7.1"
 scope = "testOnly"
 modules = [
 	{org = "ballerina", packageName = "csv_commons", moduleName = "csv_commons"}
@@ -19,7 +19,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "data.csv"
-version = "0.7.0"
+version = "0.7.1"
 scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
@@ -72,7 +72,7 @@ scope = "testOnly"
 [[package]]
 org = "ballerina"
 name = "parse_record_types_tests"
-version = "0.7.0"
+version = "0.7.1"
 dependencies = [
 	{org = "ballerina", name = "csv_commons"},
 	{org = "ballerina", name = "data.csv"},
