--- a/ballerina-tests/constraint-validation-tests/Dependencies.toml
+++ b/ballerina-tests/constraint-validation-tests/Dependencies.toml
@@ -5,7 +5,7 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.11.0"
+distribution-version = "2201.12.0-20250228-201300-8d411a0f"
 
 [[package]]
 org = "ballerina"
@@ -22,7 +22,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "constraint_validation_tests"
-version = "0.7.0"
+version = "0.7.1"
 dependencies = [
 	{org = "ballerina", name = "constraint"},
 	{org = "ballerina", name = "data.csv"},
@@ -35,7 +35,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "data.csv"
-version = "0.7.0"
+version = "0.7.1"
 scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
