--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,12 +1,12 @@
 [package]
 org = "ballerina"
 name = "data.csv"
-version = "0.7.1"
+version = "0.8.0"
 authors = ["Ballerina"]
 keywords = ["csv"]
 repository = "https://github.com/ballerina-platform/module-ballerina-data.csv"
 license = ["Apache-2.0"]
-distribution = "2201.11.0"
+distribution = "2201.12.0"
 export = ["data.csv"]
 readme = "Package.md"
 
@@ -16,11 +16,11 @@ graalvmCompatible = true
 [[platform.java21.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "data.csv-native"
-version = "0.7.1"
-path = "../native/build/libs/data.csv-native-0.7.1-SNAPSHOT.jar"
+version = "0.8.0"
+path = "../native/build/libs/data.csv-native-0.8.0-SNAPSHOT.jar"
 
 [[platform.java21.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "constraint-native"
-version = "1.6.0"
-path = "./lib/constraint-native-1.6.0.jar"
+version = "1.7.0"
+path = "./lib/constraint-native-1.7.0-20250305-165400-52275bd.jar"
