Add error message for the file IO errors

--- a/native/src/main/resources/csv_error.properties
+++ b/native/src/main/resources/csv_error.properties
@@ -110,3 +110,6 @@ error.header.value.cannot.be.empty=\
 
 error.duplicate.header=\
   duplicate header found: ''{0}''
+
+error.file.io.operation.failure=\
+  file I/O operation failed: ''{0}''
